--- a/src/vscp/drivers/level1/apox/win32/apoxdrv.vcxproj
+++ b/src/vscp/drivers/level1/apox/win32/apoxdrv.vcxproj
@@ -213,7 +213,7 @@ copy  /Y "$(OutDir)$(TargetName).lib" "$(VSCP_INSTALL)\files\drivers\$(PlatformT
       <SuppressStartupBanner>true</SuppressStartupBanner>
       <WarningLevel>Level3</WarningLevel>
       <MinimalRebuild>true</MinimalRebuild>
-      <DebugInformationFormat>EditAndContinue</DebugInformationFormat>
+      <DebugInformationFormat>None</DebugInformationFormat>
       <AdditionalIncludeDirectories>$(wxwin)\include\msvc;$(WXWIN)\include\;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>_CRT_SECURE_NO_WARNINGS;WIN32;_DEBUG;_WINDOWS;_USRDLL;apoxdrv_EXPORTS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <AssemblerListingLocation>$(IntDir)</AssemblerListingLocation>
