Added SSL support to MQTT driver

--- a/src/vscp/daemon/linux/Makefile.in
+++ b/src/vscp/daemon/linux/Makefile.in
@@ -11,7 +11,7 @@ top_builddir = @top_builddir@
 top_wxbuilddir = @top_wxbuilddir@
 CC = @CC@
 CXX = @CXX@
-MONGOOSE_CFLAGS = -DMG_ENABLE_THREADS -DMG_ENABLE_IPV6 -DMG_ENABLE_SSL -DMG_ENABLE_MQTT_BROKER -DMG_ENABLE_JAVASCRIPT -DMG_ENABLE_HTTP_CGI -DMG_ENABLE_HTTP_SSI -DMG_ENABLE_HTTP_SSI_EXEC -DMG_ENABLE_HTTP_WEBDAV -DMG_ENABLE_GETADDRINFO
+MONGOOSE_CFLAGS = -DMG_ENABLE_THREADS -DMG_ENABLE_IPV6 -DMG_ENABLE_SSL -DMG_ENABLE_MQTT_BROKER -DMG_ENABLE_JAVASCRIPT -DMG_ENABLE_HTTP_CGI -DMG_ENABLE_HTTP_SSI -DMG_ENABLE_HTTP_SSI_EXEC -DMG_ENABLE_HTTP_WEBDAV -DMG_ENABLE_GETADDRINFO -DMG_ENABLE_HTTP_URL_REWRITES
 V7_CFLAGS = -DMG_ENABLE_SSL -DV7_ENABLE_JS_GETTERS -DV7_ENABLE_JS_SETTERS -DV7_BUILD_PROFILE=3 -DV7_ENABLE_CRYPTO -DV7_ENABLE_FILE -DV7_ENABLE_SOCKET
 CFLAGS = -g -O0 -pthread  -D VSCP_ENABLE_LUA -I/usr/include/lua5.2  -I../../common -I../../../common
 CXXFLAGS = -g -O0  -D MG_ENABLE_THREADS 
