--- a/src/vscp/vscpworks/Makefile.in
+++ b/src/vscp/vscpworks/Makefile.in
@@ -10,8 +10,9 @@ top_wxsrcdir = @top_wxsrcdir@
 top_builddir = @top_builddir@
 top_wxbuilddir = @top_wxbuilddir@
 CXX = @CXX@
+MONGOOSE_FLAGS = -DMG_ENABLE_THREADS -DMG_ENABLE_IPV6 -DMG_ENABLE_SSL -DMG_ENABLE_GETADDRINFO
 CXXFLAGS = @CXXFLAGS@
-CPPFLAGS = @CPPFLAGS@ -DwxUSE_GUI=1 -D MG_ENABLE_THREADS -I. -I../common -I../../common
+CPPFLAGS = @CPPFLAGS@ -DwxUSE_GUI=1 $(MONGOOSE_FLAGS) -I. -I../common -I../../common
 LDFLAGS = @LDFLAGS@
 EXTRALIBS = @EXTRALIBS@
 STRIP = strip
@@ -30,7 +31,7 @@ DLLPREFIX = lib
 ### Variables: ###
 
 DESTDIR = 
-WX_RELEASE = 2.8
+WX_RELEASE = 3.0
 LIBDIRNAME = $(top_wxbuilddir)lib
 
 VSCPWORKS_OBJECTS =  vscpworks.o dlgvscpmsg.o \
