--- a/tests/helperlib/Makefile
+++ b/tests/helperlib/Makefile
@@ -2,12 +2,9 @@
 all:	test_helperlib
 
 
-example1:	example1.c
-	cc example1.c -o example1 -I ../.. -I../../../common -I../../../../common -L.. -lvscphelper
-
 test_helperlib:       test_helperlib.c
-	cc -std=c99 -UWXDEBUG test_helperlib.c -o test_helperlib -I../src/common -I../src/vscp/common -L../src/vscp/helperlib/linux -lm -lvscphelper
+	cc -std=c99 -UWXDEBUG test_helperlib.c -o test_helperlib -I../../src/common -I../../src/vscp/common -L../../src/vscp/helperlib/linux -lm -lvscphelper
 
 clean:
-	rm test_helperlib
-	rm *.o
+	rm -f test_helperlib
+	rm -f *.o
