Updated multicast announce code so it adopts to the new frame format udp interface rewritten

--- a/src/vscp/daemon/linux/Makefile.in
+++ b/src/vscp/daemon/linux/Makefile.in
@@ -53,6 +53,7 @@ VSCPD_OBJECTS =  vscpd.o \
 	../../common/vscprestserver.o \
 	../../common/vscpwebsocketserver.o \
 	../../common/udpclientthread.o \
+	../../common/vscpmulticastclientthread.o \
 	../../common/tables.o \
 	../../common/vscpautomation.o \
 	../../common/knownnodes.o \
