Updated aqlite3 to 3.19.3

--- a/tests/udp/Makefile
+++ b/tests/udp/Makefile
@@ -10,7 +10,7 @@ EXTRALIBS =  -lz -lrt -lm -lcrypto
 
 TEST_SPECIALS = crc.o
 
-all:	uc udpsrv send_vscp_udp_frame
+all:	uc udpsrv send_vscp_udp_frame receive_vscp_udp_frame
 
 uc:	udpclient.c
 	cc -std=c99 $(CFLAGS) udpclient.c -o uc 
@@ -24,8 +24,12 @@ crc.o: ../../src/common/crc.o ../../src/common/crc.h
 send_vscp_udp_frame:     send_vscp_udp_frame.o crc.o
 	$(CC)  $(CFLAGS) -o $@ send_vscp_udp_frame.o crc.o $(LDFLAGS) -L$(LIBDIRNAME) $(EXTRALIBS)	
 
+receive_vscp_udp_frame:     receive_vscp_udp_frame.o crc.o
+	$(CC)  $(CFLAGS) -o $@ receive_vscp_udp_frame.o crc.o $(LDFLAGS) -L$(LIBDIRNAME) $(EXTRALIBS)
+
 clean:
 	rm -f uc
 	rm -f udpsrv
 	rm -f send_vscp_udp_frame
+	rm -f receive_vscp_udp_frame
 	rm -f *.o
