Added and tested PBKDF2 on windows

--- a/src/vscp/daemon/win32/vscpd.vcxproj
+++ b/src/vscp/daemon/win32/vscpd.vcxproj
@@ -492,6 +492,7 @@
   <ItemGroup>
     <ClInclude Include="..\..\..\common\aes.h" />
     <ClInclude Include="..\..\..\common\crc8.h" />
+    <ClInclude Include="..\..\..\common\fastpbkdf2.h" />
     <ClInclude Include="..\..\..\common\frozen.h" />
     <ClInclude Include="..\..\..\common\mongoose.h" />
     <ClInclude Include="..\..\..\common\slre.h" />
@@ -540,6 +541,7 @@
   <ItemGroup>
     <ClCompile Include="..\..\..\common\aes.c" />
     <ClCompile Include="..\..\..\common\crc8.c" />
+    <ClCompile Include="..\..\..\common\fastpbkdf2.c" />
     <ClCompile Include="..\..\..\common\frozen.c" />
     <ClCompile Include="..\..\..\common\jsonreader.cpp" />
     <ClCompile Include="..\..\..\common\jsonval.cpp" />
